hphp/hack/test/typecheck/sealed/trait4.php.exp
File "trait4.php", line 10, characters 7-8:
You cannot use sealed trait T (Typing[4238])
File "trait4.php", line 4, characters 7-7:
Declaration is here
